# robomaster-s1-ros2

./: CHANGELOG.md  README.md
originbot_base/include/originbot_base/: originbot_base.h
originbot_base/launch/: robot.launch.py
originbot_base/src/: originbot_base.cpp  robomaster_s1.c  robomaster_s1.cpp  robomaster_s1_crc.c
originbot_bringup/config/: joy.yaml
originbot_bringup/launch/: camera.launch.py  camera_internal.launch.py  camera_websoket_display.launch.py  originbot.launch.py
originbot_demo/: setup.py
originbot_demo/originbot_demo/: control_buzzer.py  control_led.py  draw_circle.py  echo_odom.py  echo_status.py  transport_img.py
originbot_driver/qpOASES/: readme.txt
originbot_driver/qpOASES/examples/test/: x.cpp
originbot_example/originbot_autonomous/: CMakeLists.txt  package.xml
originbot_example/originbot_autonomous/MPC/include/: loadPath.h  originbot_mpc.h
originbot_example/originbot_autonomous/MPC/launch/: originbot_mpc.launch.py
originbot_example/originbot_autonomous/MPC/src/: loadPath.cc  originbot_mpc.cc
originbot_example/originbot_autonomous/Purepursuit/include/: originbot_purepursuit.h
originbot_example/originbot_autonomous/Purepursuit/src/: originbot_purepursuit.cc
originbot_example/originbot_autonomous/config/: mpc_settings.yaml
originbot_example/originbot_autonomous/waypoints/: path.csv
originbot_example/originbot_teleop/: CMakeLists.txt  package.xml
originbot_example/originbot_teleop/include/: originbot_teleop.hpp
originbot_example/originbot_teleop/src/: originbot_teleop.cc
originbot_example/take_pictures_node/: CMakeLists.txt  README.md  package.xml
originbot_example/take_pictures_node/include/take_pictures_node/: take_pictures_node.h
originbot_example/take_pictures_node/launch/: take_pictures_node.launch.py
originbot_example/take_pictures_node/src/: main.cc  take_picrtures_node.cc
originbot_linefollower/originbot_linefollower/: follower.py
originbot_msgs/msg/: OriginbotStatus.msg
originbot_msgs/srv/: OriginbotBuzzer.srv  OriginbotPID.srv
originbot_navigation/config/: ekf.yaml
originbot_navigation/launch/: ekf.md  odom_ekf.launch.py
originbot_navigation/send_goal/: CMakeLists.txt  package.xml
originbot_navigation/send_goal/src/: send_goal_node.cpp
