<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>originbot_autonomous</name>
  <version>0.0.0</version>
  <description>OriginBot Autonomous</description>
  <maintainer email="support@ps-micro.com">GuYueHome</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>qpoases_vendor</buildtool_depend>
  <buildtool_depend>ament_index_cpp</buildtool_depend>
  <depend>rclcpp</depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>qpoases_vendor</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
